--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 }
 
 body {
+  cursor: none;
   font-family: var(--font);
   background: var(--bg-image) no-repeat center center fixed;
   background-size: cover;
@@ -584,5 +585,15 @@ button {
 
 .back-arrow:hover .arrow-icon path {
   stroke: #fff;
+}
+
+.cursor1 {
+  width: 20px;
+  height: 20px;
+  border: 2px solid red;
+  border-radius: 50%;
+  position: fixed;
+  pointer-events: none; /* important pour cliquer à travers */
+  transform: translate(-50%, -50%);
 }
 
