--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ nav {
 
 .page-header h1 {
   font-size: 2.5rem;
-  color: var(--accent-light);
+  color: var(--accent);
   font-family: var(--font-title);
 }
 
@@ -589,6 +589,7 @@ button {
 .titles {
   color: var(--accent)
 }
+
 
 
 
